test/libsolidity/syntaxTests/parsing/constructor_public_public.sol
contract C {
  constructor() public public {}
}
// ----
// ParserError 9439: (36-42='public'): Visibility already specified as "public".
